<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicSync</string>
    <string name="action_settings">Settings</string>
    <string name="service_start">Start Service</string>
    <string name="service_stop">Stop Service</string>
    <string name="server_address">Server Address</string>
    <string name="check">Check</string>
    <string name="check_long">Check</string>
    <string name="local_folder">Local Folder</string>
    <string name="credentials">Credentials</string>
    <string name="credentials_opt">Credentials (optional)</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="wifi_network">WIFI Network</string>
    <string name="current">Current</string>
    <string name="server_expl">Enter the IP and directory of the remote folder here like this:\n//IP Address/Path/</string>
    <string name="no_server_entered">Please enter a server first</string>
    <string name="ok">OK</string>

</resources>
